--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 server.error.whitelabel.enabled=false
+fixer.io.convert.baseurl=https://api.apilayer.com/fixer
+fixer.io.api.key=mITaeVJpOKqo1X5xsTbO6aYk8Gh85Vze
